--- a/QtNFCReaderGUI/QtNFCReaderGUI/QtNFCReaderGUI.vcxproj.filters
+++ b/QtNFCReaderGUI/QtNFCReaderGUI/QtNFCReaderGUI.vcxproj.filters
@@ -40,7 +40,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="NFC.cpp">
+    <ClCompile Include="NFCManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -54,7 +54,7 @@
     <ClInclude Include="lib\ODALID.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NFC.h">
+    <ClInclude Include="NFCManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
