--- a/QtNFCReaderGUI/QtNFCReaderGUI/QtNFCReaderGUI.vcxproj.filters
+++ b/QtNFCReaderGUI/QtNFCReaderGUI/QtNFCReaderGUI.vcxproj.filters
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="lib\ODALID_Education.dll" />
+    <None Include="ODALID_Education.dll" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="lib\libODALID_Education.a" />
